plugins {
    id "java-library"
    id "idea"
    id "maven-publish"
    id "net.neoforged.gradle.userdev" version "7.0.182"
}

version = "${project.mc_version}-${project.mod_version}"
group = "com.teamabnormals"

base {
    archivesName = project.mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)
minecraft.accessTransformers.file rootProject.file("src/main/resources/META-INF/accesstransformer.cfg")

runs {
    configureEach {
        systemProperty "forge.logging.markers", "REGISTRIES"
        systemProperty "forge.logging.console.level", "debug"
    }
    client {
        modSources {
            add project.sourceSets.main
        }
    }
    server {
        modSources {
            add project.sourceSets.main
        }
    }
    data {
        modSources {
            add project.sourceSets.main
        }
        arguments.addAll "--mod", project.mod_id, "--all", "--output", file("src/generated/resources/").getAbsolutePath(), "--existing", file("src/main/resources/").getAbsolutePath(), "--existing-mod", "blueprint"
    }
}

sourceSets.main.resources {
    srcDir "src/generated/resources"
}

dependencies {
    implementation "net.neoforged:neoforge:${project.neoforge}"
    implementation("com.teamabnormals:blueprint:${project.mc_version}-${project.blueprint}")

    implementation("com.teamabnormals:gallery:${project.mc_version}-${project.gallery}")

    compileOnly("mezz.jei:jei-${project.mc_version}-neoforge-api:${project.jei}")
    runtimeOnly("mezz.jei:jei-${project.mc_version}-neoforge:${project.jei}")
}

subsystems {
    parchment {
        minecraftVersion = "${project.mc_version}"
        mappingsVersion = "${project.parchment}"
    }
}

repositories {
    maven { url "https://maven.teamabnormals.com/" }
    maven { url = "https://maven.blamejared.com/" }
    maven { url = "https://modmaven.dev" }
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [mod_version: mod_version, mc_version: mc_version, neoforge: neoforge, blueprint: blueprint]
    inputs.properties replaceProperties
    filesMatching(["META-INF/neoforge.mods.toml"]) {
        expand replaceProperties
    }
}

tasks.named("jar", Jar).configure {
    manifest {
        attributes([
                "Specification-Title"     : project.mod_name,
                "Specification-Vendor"    : "Team Abnormals",
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.mod_name,
                "Implementation-Version"  : project.mod_version,
                "Implementation-Vendor"   : "Team Abnormals",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}